--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Halloween Fest</title>
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
         <div class="topnav">
@@ -20,7 +20,7 @@
             <iframe id="form" src="https://docs.google.com/forms/d/e/1FAIpQLSe3BUNm0Sh5l5tphQ81ZwKx0TR2Qyeapq_C1KZgYTdW6BzhFA/viewform?embedded=true" width="700" height="705" frameborder="0" marginheight="0" marginwidth="0" style="display: none;">Carregando…</iframe>    
             <iframe id="formM" src="https://docs.google.com/forms/d/e/1FAIpQLScXbhUOX0me5UA3fNCaQLU4e4xszRmrUkzx-I5eq2KpAsE22A/viewform?usp=sf_link" width="640" height="705" frameborder="0" marginheight="0" marginwidth="0" style="display: none;">Carregando…</iframe>
         </div>
-        <img class="fundo" src="/Witch_1.jpeg">
+        <img class="fundo" src="/assets/Witch_1.jpeg">
         <footer>Data: 07/10 às 20hrs <br> Local: Clube da Maçonaria</footer>
         <script>
             function pagar_pix(){
