--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="topnav">
             <h1 class="titulo">Halloween Fest</h1>
-            <img class="fantasma" src="https://assets.stickpng.com/images/5f46aa054af307000478e7e0.png">
+            <img class="fantasma" src="./assets/5f46aa054af307000478e7e0.png">
         </div>
         
         <div class="container">
@@ -22,25 +22,48 @@
             <button id="money" class="button" onclick="pagar_dinheiro()">Dinheiro</button>
             <iframe id="form" src="https://docs.google.com/forms/d/e/1FAIpQLSe3BUNm0Sh5l5tphQ81ZwKx0TR2Qyeapq_C1KZgYTdW6BzhFA/viewform?embedded=true" width="700" height="705" frameborder="0" marginheight="0" marginwidth="0" style="display: none;">Carregando…</iframe>    
             <iframe id="formM" src="https://docs.google.com/forms/d/e/1FAIpQLScXbhUOX0me5UA3fNCaQLU4e4xszRmrUkzx-I5eq2KpAsE22A/viewform?usp=sf_link" width="640" height="705" frameborder="0" marginheight="0" marginwidth="0" style="display: none;">Carregando…</iframe>
+            <button id="voltar" class="button" onclick="voltar()" style="display: none;">voltar</button>
         </div>
         <img class="fundo" src="./assets/Witch_1.jpeg">
-        <footer>Data: 07/10 às 20hrs <br> Local: Clube da Maçonaria</footer>
+        <footer id="footer">Data: 07/10 às 20hrs <br> Local: Clube da Maçonaria</footer>
         <script>
-            function pagar_pix(){
+            function voltar(){
+                var voltar = document.getElementById("voltar");
                 var pix = document.getElementById("pix");
+                var footer = document.getElementById("footer");
                 var form = document.getElementById("form");
                 var money = document.getElementById("money");
+                var formM = document.getElementById("formM");
+                voltar.style.display = "none";
+                footer.style.display = "block";
+                money.style.display = "block";
+                pix.style.display = "block";
+                form.style.display = "none";
+                formM.style.display = "none";
+            }
+            function pagar_pix(){
+                var voltar = document.getElementById("voltar");
+                var pix = document.getElementById("pix");
+                var footer = document.getElementById("footer");
+                var form = document.getElementById("form");
+                var money = document.getElementById("money");
+                voltar.style.display = "block";
+                footer.style.display = "none";
                 money.style.display = "none";
                 pix.style.display = "none";
                 form.style.display = "block";
             }
             function pagar_dinheiro(){
+                var voltar = document.getElementById("voltar");
                 var money = document.getElementById("money");
+                var footer = document.getElementById("footer");
                 var pix = document.getElementById("pix");
                 var form = document.getElementById("formM");
+                voltar.style.display = "block";
                 money.style.display = "none";
                 pix.style.display = "none";
                 form.style.display = "block";
+                footer.style.display = "none";
             }
         </script>
     </body>  
