--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="container">
             <div class="text">
                 <h1>Ingressos</h1>
-                <p>Escolha a forma de pagamento</p>
+                <h3>Primeiro Lote!! R$ 10</h3>
+                <h4>Escolha a forma de pagamento</h4>
             </div>
             <button id="pix" class="button" onclick="pagar_pix()">Pix</button>
             <button id="money" class="button" onclick="pagar_dinheiro()">Dinheiro</button>
